# geometry

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dot.cpp  dot.h  enter_coordinates.cpp  enter_coordinates.h  vector.cpp  vector.h
include/: point.h  vector.h
src/: main.cpp  point.cpp  vector.cpp
